Project page alignment fix

--- a/src/styles/commonStyles.css
+++ b/src/styles/commonStyles.css
@@ -251,6 +251,7 @@ due to bugs in gatsby. */
   }
   .projects-heading {
     width: 50%;
+    top: 8%;
   }
 }
 
